[package]
authors = ["Andrew Hobden <andrew@hoverbear.org>"]
name = "ocean"
version = "0.0.1"
[dependencies]
dotenv = "0.10.0"
env_logger = "0.4.3"
error-chain = "0.11.0-rc.2"
log = "0.3.8"
prettytable-rs = "0.6.7"
serde = "1.0.11"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
toml = "0.4.5"
digitalocean = "0.0.2"
clap = "2.26.0"
