[package]
name = "ocean"
version = "0.0.1"
authors = ["Andrew Hobden <andrew@hoverbear.org>"]
repository = "https://github.com/hoverbear/ocean"
categories = ["development-tools", "command-line-interface", "api-bindings"]
homepage = "https://github.com/hoverbear/ocean"
documentation = "https://docs.rs/crate/ocean/"

keywords = ["DigitalOcean", "IaaS", "API"]
license = "MIT"
readme = "README.md"

[badges]
gitlab = { repository = "https://github.com/hoverbear/ocean" }
travis-ci = { repository = "hoverbear/ocean" }
maintenance = { status = "experimental" }

[dependencies]
dotenv = "0.10.0"
env_logger = "0.4.3"
error-chain = "0.11.0-rc.2"
log = "0.3.8"
prettytable-rs = "0.6.7"
serde = "1.0.11"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
toml = "0.4.5"
digitalocean = "0.0.2"
clap = "2.26.0"
