[package]
authors = ["Andrew Hobden <andrew@hoverbear.org>"]
description = "A command line interface for DigitalOcean."
categories = ["development-tools", "command-line-interface", "api-bindings"]
documentation = "https://docs.rs/crate/ocean/"
homepage = "https://github.com/hoverbear/ocean"
keywords = ["DigitalOcean", "IaaS", "API"]
license = "MIT"
name = "ocean"
readme = "README.md"
repository = "https://github.com/hoverbear/ocean"
version = "0.0.1"

[badges]
[badges.gitlab]
repository = "https://github.com/hoverbear/ocean"

[badges.maintenance]
status = "experimental"

[badges.travis-ci]
repository = "hoverbear/ocean"

[dependencies]
clap = "2.26.0"
digitalocean = { version="0.0.3", path="../digitalocean" }
#digitalocean = "0.0.3"
dotenv = "0.10.0"
env_logger = "0.4.3"
error-chain = "0.11.0-rc.2"
log = "0.3.8"
prettytable-rs = "0.6.7"
serde = "1.0.11"
serde_derive = "*"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
toml = "0.4.5"
